Fix blog layout bugs

--- a/static/global.css
+++ b/static/global.css
@@ -64,7 +64,7 @@ h2 {
   margin: 0.9em 0 0.6em;
   font-weight: 400;
   line-height: 1.3;
-  font-feature-settings: "kern", "ss03";
+  font-feature-settings: 'kern', 'ss03';
 }
 
 h3,
